add doi profile